      the --debug=count command-line option is used (#2922).
    - Added release_target_info() to File nodes, which helps to
      reduce memory consumption in clean builds and update runs
      of large projects.

  From Gary Oberbrunner:
    - Test harness: fail_test() can now print a message to help debugging.

  From Anatoly Techtonik:
    - require rpmbuild when building SCons package.
    - print full stack on certain errors, for debugging.

  From William Deegan:
    - VS2012 & VS2010 Resolve initialization issues by adding path to reg.exe
      in shell used to run batch files.
    - MSVC Support fixed defaulting TARGET_ARCH to HOST_ARCH. It should be
      None if not explicitly set.
    - MSVC Fixed issue where if more than one Architectures compilers are
      detected, it would take the last one found, and not the first.

  From Philipp Kraus:
    - Added optional ZIPROOT to Zip tool.

  From Dirk Baechle:
    - Replaced old SGML-based documentation toolchain with a more modern
      approach, that also requires less external dependencies (programs and
      Python packages). Added a customized Docbook XSD for strict validation of
      all input XML files.

  From Luca Falavigna:
    - Fixed spelling errors in MAN pages (#2897).

  From Michael McDougall:
    - Fixed description of ignore_case for EnumVariable in the
      MAN page (#2774).

RELEASE 2.3.0 - Mon, 02 Mar 2013 13:22:29 -0400

  From Anatoly Techtonik:
    - Added ability to run scripts/scons.py directly from source checkout
    - Hide deprecated --debug={dtree,stree,tree} from --help output
    - Error messages from option parser now include hints about valid choices
    - Cleaned up some Python 1.5 and pre-2.3 code, so don't expect SCons
      to run on anything less than Python 2.4 anymore
    - Several fixes for runtest.py:
      * exit with an error if no tests were found
      * removed --noqmtest option - this behavior is by default